--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-///:Whitney M Wilson
+Whitney M Wilson
 I will forever&@lw@y$
 💙love💚you
 sudo rpm --import https://packages.microsoft.com/keys/microsoft.asc
